--- a/example.html
+++ b/example.html
@@ -6,11 +6,17 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>Document</title>
 </head>
+
+<style>
+  body{
+    clip-path: polygon(0 5%, 10% 4%, 20% 3%, 30% 2%, 40% 1%, 50% 0.5%, 60% 1%, 70% 2%, 80% 3%, 90% 4%, 100% 5%, 100% 100%, 0 100%);
+  }
+</style>
 <body>
   
   <div class="container-fluid p-sm-5 bg-dark text-white">
     <div class="container-md row">
-      <div class="col-md-6 my-sm-5">
+      <div class="col-md-6 my-sm-5" id="b">
         <h1>Project Title Here</h1>
         <hr style="width: 20px">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto animi consequatur facere sequi cumque, sint nam numquam quia quam debitis voluptatum error, reiciendis nemo doloremque.</p>
